--- a/templates/squarepants/master.html.twig
+++ b/templates/squarepants/master.html.twig
@@ -1,5 +1,13 @@
+{% extends 'base.html.twig' %}
+{% block body %}
 <div>
+
+{{ message }}
+
     <form action="" method="post">
-        Message: <input type="text" name="input"></form>
+            <input type="text" name="input" placeholder="Write a message">
     <input type="submit" value="submit">
+    </form>
+
 </div>
+{% endblock %}
